# Project

./: ABSOLUTE_FINAL_CHECK.md  BUGFIXES.md  BUILD_AND_TEST.md  CHANGES_SUMMARY.md  CMakeLists.txt  COMPLETE_VERIFICATION.md  CRITICAL_BUG_FIXED.md  FILE_TRANSFER_README.md  FINAL_CHECKLIST.md  FINAL_COMPLETE_CHECK.md  FINAL_STATUS.txt  FIXES_APPLIED.md  INTEGRATION_EXAMPLE.md  LOCALHOST_GUIDE.md  MULTI_CLIENT_FILE_TRANSFER.md  PROJECT_CLEAN.txt  PROJECT_STATUS.md  QUICK_START_FILE_TRANSFER.md  README.md  READY_TO_BUILD.md  TWO_PC_GUIDE.md  VERIFICATION_SUMMARY.txt  test_file.txt  test_file_transfer.sh  test_multi_client_file_transfer.sh
include/: FileAccessManager.h  GetLocalAddress.h  Manager.h  MyClient.h  MyProcessor.h  MyServer.h  MyThread.h  ProcessFileTransfer.h  ProcessSingleClient.h  ServerStats.h
src/: CMakeLists.txt
src/demo/: CMakeLists.txt
src/demo/demoFileTransferClient/: demoFileTransferClient.cpp
src/demo/demoFileTransferServer/: demoFileTransferServer.cpp
src/lib/myClient/: MyClient.cpp
src/lib/myServer/: MyServer.cpp  ProcessFileTransfer.cpp
src/myClient/: CMakeLists.txt  MyClient.cpp  demoClient.cpp
src/myServer/: CMakeLists.txt  FileAccessManager.cpp  MyProcessor.cpp  MyServer.cpp  MyThread.cpp  ProcessFileTransfer.cpp  ProcessSingleClient.cpp  ServerStats.cpp  demoFileTransferServer.cpp  demoMutexFileTransferServer.cpp  demoServer.cpp
